@@ -9,6 +9,8 @@ PHP                                                                        NEWS
   which to group by data is specified. (Ilia)
 - Upgraded PCRE to version 7.6 (Nuno)
 
+- Fixed bug #44046 (crash inside array_slice() function with an invalid
+  by-ref offset). (Ilia)
 - Fixed bug #44028 (crash inside stream_socket_enable_crypto() when enabling  
   encryption without crypto type). (Ilia)
 - Fixed bug #43954 (Memory leak when sending the same HTTP status code
